@@ -31,6 +31,10 @@
 #include <bzlib.h>
 #endif
 
+#if defined( HAVE_LIBLZMA ) || defined( LIBLZMA_DLL )
+#include <lzma.h>
+#endif
+
 #if defined( HAVE_ZLIB ) || defined( ZLIB_DLL )
 #include <zlib.h>
 #endif
@@ -43,7 +47,7 @@
 #include "libmodi_libcnotify.h"
 
 /* Decompresses data using the compression method
- * Returns 1 on success, 0 on failure or -1 on error
+ * Returns 1 on success or -1 on error
  */
 int libmodi_decompress_data(
      const uint8_t *compressed_data,
@@ -54,13 +58,18 @@ int libmodi_decompress_data(
      libcerror_error_t **error )
 {
 	static char *function                     = "libmodi_decompress_data";
-	int result                                = 0;
 
 #if defined( HAVE_BZLIB ) || defined( BZLIB_DLL )
 	unsigned int bzip2_uncompressed_data_size = 0;
+	int bzlib_result                          = 0;
+#endif
+#if defined( HAVE_LIBLZMA ) || defined( LIBLZMA_DLL )
+	lzma_stream lzma_compressed_stream        = LZMA_STREAM_INIT;
+	lzma_ret lzma_result                      = 0;
 #endif
 #if ( defined( HAVE_ZLIB ) && defined( HAVE_ZLIB_UNCOMPRESS ) ) || defined( ZLIB_DLL )
 	uLongf zlib_uncompressed_data_size        = 0;
+	int zlib_result                           = 0;
 #endif
 
 	if( compressed_data == NULL )
@@ -109,23 +118,21 @@ int libmodi_decompress_data(
 	}
 	if( compression_method == LIBMODI_COMPRESSION_METHOD_ADC )
 	{
-		result = libmodi_adc_decompress(
-		          compressed_data,
-		          compressed_data_size,
-		          uncompressed_data,
-		          uncompressed_data_size,
-		          error );
-
-		if( result != 1 )
+		if( libmodi_adc_decompress(
+		     compressed_data,
+		     compressed_data_size,
+		     uncompressed_data,
+		     uncompressed_data_size,
+		     error ) != 1 )
 		{
 			libcerror_error_set(
 			 error,
-			 LIBCERROR_ERROR_DOMAIN_ENCRYPTION,
-			 LIBCERROR_ENCRYPTION_ERROR_GENERIC,
+			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
+			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
 			 "%s: unable to decompress ADC compressed data.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 	}
 	else if( compression_method == LIBMODI_COMPRESSION_METHOD_BZIP2 )
@@ -140,7 +147,7 @@ int libmodi_decompress_data(
 			 "%s: invalid compressed data size value exceeds maximum.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 		if( *uncompressed_data_size > (size_t) UINT_MAX )
 		{
@@ -151,82 +158,65 @@ int libmodi_decompress_data(
 			 "%s: invalid uncompressed data size value exceeds maximum.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 		bzip2_uncompressed_data_size = (unsigned int) *uncompressed_data_size;
 
-		result = BZ2_bzBuffToBuffDecompress(
-			  (char *) uncompressed_data,
-			  &bzip2_uncompressed_data_size,
-			  (char *) compressed_data,
-			  (unsigned int) compressed_data_size,
-			  0,
-			  0 );
+		bzlib_result = BZ2_bzBuffToBuffDecompress(
+		                (char *) uncompressed_data,
+		                &bzip2_uncompressed_data_size,
+		                (char *) compressed_data,
+		                (unsigned int) compressed_data_size,
+		                0,
+		                0 );
 
-		if( result == BZ_OK )
-		{
-			*uncompressed_data_size = (size_t) bzip2_uncompressed_data_size;
-
-			result = 1;
-		}
-		else if( ( result == BZ_DATA_ERROR )
-		      || ( result == BZ_DATA_ERROR_MAGIC ) )
-		{
-#if defined( HAVE_DEBUG_OUTPUT )
-			if( libcnotify_verbose != 0 )
-			{
-				libcnotify_printf(
-				 "%s: unable to read compressed data: data error.\n",
-				 function );
-			}
-#endif
-			*uncompressed_data_size = 0;
-
-			result = -1;
-		}
-		else if( result == BZ_OUTBUFF_FULL )
-		{
-#if defined( HAVE_DEBUG_OUTPUT )
-			if( libcnotify_verbose != 0 )
-			{
-				libcnotify_printf(
-				"%s: unable to read compressed data: target buffer too small.\n",
-				 function );
-			}
-#endif
-			/* Estimate that a factor 2 enlargement should suffice
-			 */
-			*uncompressed_data_size *= 2;
-
-			result = 0;
-		}
-		else if( result == BZ_MEM_ERROR )
+		if( ( bzlib_result == BZ_DATA_ERROR )
+		 || ( bzlib_result == BZ_DATA_ERROR_MAGIC ) )
 		{
 			libcerror_error_set(
 			 error,
 			 LIBCERROR_ERROR_DOMAIN_MEMORY,
 			 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
-			 "%s: unable to read compressed data: insufficient memory.",
+			 "%s: unable to decompress data: data error.",
 			 function );
 
-			*uncompressed_data_size = 0;
-
-			result = -1;
+			goto on_error;
 		}
-		else
+		else if( bzlib_result == BZ_OUTBUFF_FULL )
 		{
 			libcerror_error_set(
 			 error,
 			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
 			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
-			 "%s: libbz2 returned undefined error: %d.",
-			 function,
-			 result );
+			 "%s: unable to decompress data: target buffer too small.",
+			 function );
 
-			*uncompressed_data_size = 0;
-
-			result = -1;
+			goto on_error;
 		}
+		else if( bzlib_result == BZ_MEM_ERROR )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_MEMORY,
+			 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+			 "%s: unable to decompress data: insufficient memory.",
+			 function );
+
+			goto on_error;
+		}
+		else if( bzlib_result != BZ_OK )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
+			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
+			 "%s: bzlib returned undefined error: %d.",
+			 function,
+			 bzlib_result );
+
+			goto on_error;
+		}
+		*uncompressed_data_size = (size_t) bzip2_uncompressed_data_size;
 #else
 		libcerror_error_set(
 		 error,
@@ -235,7 +225,7 @@ int libmodi_decompress_data(
 		 "%s: missing support for bzip2 compression.",
 		 function );
 
-		return( -1 );
+		goto on_error;
 #endif /* defined( HAVE_BZLIB ) || defined( BZLIB_DLL ) */
 	}
 	else if( compression_method == LIBMODI_COMPRESSION_METHOD_DEFLATE )
@@ -250,7 +240,7 @@ int libmodi_decompress_data(
 			 "%s: invalid compressed data size value exceeds maximum.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 		if( *uncompressed_data_size > (size_t) ULONG_MAX )
 		{
@@ -261,53 +251,39 @@ int libmodi_decompress_data(
 			 "%s: invalid uncompressed data size value exceeds maximum.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 		zlib_uncompressed_data_size = (uLongf) *uncompressed_data_size;
 
-		result = uncompress(
-			  (Bytef *) uncompressed_data,
-			  &zlib_uncompressed_data_size,
-			  (Bytef *) compressed_data,
-			  (uLong) compressed_data_size );
+		zlib_result = uncompress(
+		               (Bytef *) uncompressed_data,
+		               &zlib_uncompressed_data_size,
+		               (Bytef *) compressed_data,
+		               (uLong) compressed_data_size );
 
-		if( result == Z_OK )
+		if( zlib_result == Z_DATA_ERROR )
 		{
-			*uncompressed_data_size = (size_t) zlib_uncompressed_data_size;
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_MEMORY,
+			 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+			 "%s: unable to decompress data: data error.",
+			 function );
 
-			result = 1;
+			goto on_error;
 		}
-		else if( result == Z_DATA_ERROR )
+		else if( zlib_result == Z_BUF_ERROR )
 		{
-#if defined( HAVE_DEBUG_OUTPUT )
-			if( libcnotify_verbose != 0 )
-			{
-				libcnotify_printf(
-				 "%s: unable to read compressed data: data error.\n",
-				 function );
-			}
-#endif
-			*uncompressed_data_size = 0;
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
+			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
+			 "%s: unable to decompress data: target buffer too small.",
+			 function );
 
-			result = -1;
+			goto on_error;
 		}
-		else if( result == Z_BUF_ERROR )
-		{
-#if defined( HAVE_DEBUG_OUTPUT )
-			if( libcnotify_verbose != 0 )
-			{
-				libcnotify_printf(
-				"%s: unable to read compressed data: target buffer too small.\n",
-				 function );
-			}
-#endif
-			/* Estimate that a factor 2 enlargement should suffice
-			 */
-			*uncompressed_data_size *= 2;
-
-			result = 0;
-		}
-		else if( result == Z_MEM_ERROR )
+		else if( zlib_result == Z_MEM_ERROR )
 		{
 			libcerror_error_set(
 			 error,
@@ -316,11 +292,9 @@ int libmodi_decompress_data(
 			 "%s: unable to read compressed data: insufficient memory.",
 			 function );
 
-			*uncompressed_data_size = 0;
-
-			result = -1;
+			goto on_error;
 		}
-		else
+		else if( zlib_result != Z_OK )
 		{
 			libcerror_error_set(
 			 error,
@@ -328,32 +302,129 @@ int libmodi_decompress_data(
 			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
 			 "%s: zlib returned undefined error: %d.",
 			 function,
-			 result );
+			 zlib_result );
 
-			*uncompressed_data_size = 0;
-
-			result = -1;
+			goto on_error;
 		}
+		*uncompressed_data_size = (size_t) zlib_uncompressed_data_size;
 #else
-		result = libmodi_deflate_decompress_zlib(
-		          compressed_data,
-		          compressed_data_size,
-		          uncompressed_data,
-		          uncompressed_data_size,
-		          error );
-
-		if( result != 1 )
+		if( libmodi_deflate_decompress_zlib(
+		     compressed_data,
+		     compressed_data_size,
+		     uncompressed_data,
+		     uncompressed_data_size,
+		     error ) != 1 )
 		{
 			libcerror_error_set(
 			 error,
-			 LIBCERROR_ERROR_DOMAIN_ENCRYPTION,
-			 LIBCERROR_ENCRYPTION_ERROR_GENERIC,
+			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
+			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
 			 "%s: unable to decompress zlib+DEFLATE compressed data.",
 			 function );
 
-			return( -1 );
+			goto on_error;
 		}
 #endif /* ( defined( HAVE_ZLIB ) && defined( HAVE_ZLIB_UNCOMPRESS ) ) || defined( ZLIB_DLL ) */
+	}
+	else if( compression_method == LIBMODI_COMPRESSION_METHOD_LZFSE )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_UNSUPPORTED_VALUE,
+		 "%s: missing support for LZFSE compression.",
+		 function );
+
+		goto on_error;
+	}
+	else if( compression_method == LIBMODI_COMPRESSION_METHOD_LZMA )
+	{
+#if defined( HAVE_LIBLZMA ) || defined( LIBLZMA_DLL )
+		lzma_result = lzma_stream_decoder(
+		               &lzma_compressed_stream,
+		               UINT64_MAX,
+		               0 );
+
+		if( lzma_result != LZMA_OK )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+			 LIBCERROR_RUNTIME_ERROR_INITIALIZE_FAILED,
+			 "%s: unable to create LZMA stream.",
+			 function );
+
+			goto on_error;
+		}
+		lzma_compressed_stream.next_in   = compressed_data;
+		lzma_compressed_stream.avail_in  = compressed_data_size;
+		lzma_compressed_stream.next_out  = uncompressed_data;
+		lzma_compressed_stream.avail_out = *uncompressed_data_size;
+
+		lzma_result = lzma_code(
+		               &lzma_compressed_stream,
+		               LZMA_RUN );
+
+		if( ( lzma_result == LZMA_DATA_ERROR )
+		 || ( lzma_result == LZMA_FORMAT_ERROR ) )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_MEMORY,
+			 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+			 "%s: unable to decompress data: data error.",
+			 function );
+
+			goto on_error;
+		}
+		else if( lzma_result == LZMA_BUF_ERROR )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
+			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
+			 "%s: unable to decompress data: target buffer too small.",
+			 function );
+
+			goto on_error;
+		}
+		else if( lzma_result == LZMA_MEM_ERROR )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_MEMORY,
+			 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+			 "%s: unable to read compressed data: insufficient memory.",
+			 function );
+
+			goto on_error;
+		}
+		else if( lzma_result != LZMA_STREAM_END )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_COMPRESSION,
+			 LIBCERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED,
+			 "%s: liblzma returned undefined error: %d.",
+			 function,
+			 lzma_result );
+
+			goto on_error;
+		}
+		*uncompressed_data_size = (size_t) lzma_compressed_stream.total_out;
+
+		lzma_end(
+		 &lzma_compressed_stream );
+#else
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_UNSUPPORTED_VALUE,
+		 "%s: missing support for LZMA compression.",
+		 function );
+
+		goto on_error;
+#endif /* defined( HAVE_LIBLZMA ) || defined( LIBLZMA_DLL ) */
 	}
 	else
 	{
@@ -364,8 +435,15 @@ int libmodi_decompress_data(
 		 "%s: unsupported compression method.",
 		 function );
 
-		return( -1 );
+		goto on_error;
 	}
-	return( result );
+	return( 1 );
+
+on_error:
+#if defined( HAVE_LIBLZMA ) || defined( LIBLZMA_DLL )
+	lzma_end(
+	 &lzma_compressed_stream );
+#endif
+	return( -1 );
 }
 
